<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ioc_ur_cb2_driver_ros</name>
  <version>0.0.0</version>
  <description>IOC driver for Universal Robots UR5 robot with CB2 controllers.</description>
  <maintainer email="pol.ramon@upc.edu">pol.ramon</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>controller_interface,</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>ioc_ur_cb2_driver</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
